Added form for input and function to test sql queries for registration (issues#1, issues#2)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ PSU ID: mar6897
             </div>
             <div id="registerUser">
                 <p id="elmnt">Not a user register here</p>
-                <input id="registertButton" type="button" onclick="depart()" value="Register"><br><br>
+                <a id="registertButton" type="button" href="register.html" value="Register">Register </a><br><br>
             </div>
         </div>
         <div class="footer">
