--- a/public/login.html
+++ b/public/login.html
@@ -17,7 +17,7 @@ PSU ID: mar6897
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Login page</a>
+            <a class="navbar-brand" href="#">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,6 +25,9 @@ PSU ID: mar6897
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/register">Register</a>
@@ -52,7 +55,7 @@ PSU ID: mar6897
                         A simple primary alert—check it out!
                     </div>
                     <div class="alert alert-success" role="alert" id="success" style="display:none;">
-                        A simple primary alert—check it out!
+                        You have been logged in!
                     </div>
 
                     <button type="submit" class="btn btn-primary">Login</button>
