--- a/public/login.html
+++ b/public/login.html
@@ -39,7 +39,7 @@ PSU ID: mar6897
         </div>
     </nav>
 
-    <div class="container my-5">
+    <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
         <div class="card" style="width: 100%; background-color: #21262d">
             <div class="card-body" style="color: #ecf2f8">
                 <h5 class="card-title">Login form</h5>
@@ -63,7 +63,6 @@ PSU ID: mar6897
                     <button type="submit" class="btn btn-success">Login &nbsp;<i class="fas fa-sign-in-alt" style="font-size:16px"></i></button>
                 </form>
 
-                <br>
                 <br>
                 <br>
 
