--- a/public/register.html
+++ b/public/register.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="utf-8">
     <title>Register page</title>
+    <script src="https://kit.fontawesome.com/1357e6d178.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/register_styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="background-color:#161b22;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,40 +33,53 @@
             </div>
         </div>
     </nav>
-    <div class="container my-5">
-        <div class="card" style="width: 100%;">
-            <div class="card-body">
+    <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
+        <div class="card" style="margin: auto; width: 60%; background-color: #21262d">
+            <div class="card-body" style="color: #ecf2f8">
                 <h5 class="card-title">Register form</h5>
+
+                <a onclick="toggle_visibility('info');" style="cursor: pointer; color: dodgerblue; font-weight: 500;">View registration tips. <i class="fa fa-info-circle" style="font-size:20px"></i></a>
+                <div id="info" style="display: none;">
+                    <p>
+                        This form allows you to register as a Voter or Admin user.
+                        <ul>
+                            <li>Selecting the Voter role requires you to fill some additional self identifier questions. You can opt off these self identifier questions.</li>
+                            <li>Selecting the Administrator role requires you to fill the defualt form fields.</li>
+                        </ul>
+                    </p>
+                </div>
+
                 <form onsubmit="return false;" id="form">
+                    <br>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" autocomplete="off" required>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" autocomplete="off" placeholder="Enter your Email address ..." required>
                         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" autocomplete="off" required>
+                        <input type="password" class="form-control" id="password" autocomplete="off" placeholder="Enter your password ..." required>
                     </div>
                     <div class="mb-3">
                         <label for="fname" class="form-label">First name</label>
-                        <input type="text" class="form-control" id="fname" required>
+                        <input type="text" class="form-control" id="fname" placeholder="Enter your First name ..." required>
                     </div>
                     <div class="mb-3">
                         <label for="lname" class="form-label">Last name</label>
-                        <input type="text" class="form-control" id="lname" required>
+                        <input type="text" class="form-control" id="lname" placeholder="Enter your Last name ..." required>
                     </div>
                     <div class="mb-3">
                         <label for="phone" class="form-label">Phone number</label>
-                        <input type="number" class="form-control" id="phone" required>
+                        <input type="number" class="form-control" id="phone" placeholder="Enter your Phone number ..." required>
                     </div>
                     <div class="mb-3">
                         <label for="dob" class="form-label">Date of birth</label>
                         <input type="date" class="form-control" id="dob" required>
                     </div>
-                    <br />
+
                     <div class="mb-3">
                         <label for="role">Choose a role:</label>
-                        <select id="role" name="role">
+                        <select id="role" name="role" class="form-select">
                             <option value="admin">Administrator</option>
                             <option value="voter">Voter</option>
                         </select>
@@ -94,8 +109,8 @@
 
                     <div class="alert alert-danger" role="alert" id="error" style="display:none;"></div>
                     <div class="alert alert-success" role="alert" id="success" style="display:none;"></div>
-
-                    <button type="submit" class="btn btn-primary" >Register</button>
+                    <br>
+                    <button type="submit" class="btn btn-success">Register &nbsp;<i class="fa fa-user-plus" style="font-size:16px"></i></button>
                 </form>
             </div>
         </div>
