--- a/public/vote.html
+++ b/public/vote.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Cast Your Vote</title>
+    <link rel="stylesheet" href="/css/vote_styles.css">
+    <script src="https://kit.fontawesome.com/1357e6d178.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="background-color:#161b22;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,15 +24,15 @@
             </div>
         </div>
     </nav>
-    <div class="container my-5">
-        <div class="card" style="width: 100%;">
-            <div class="card-body">
+    <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
+        <div class="card" style="margin: auto; background-color: #21262d;">
+            <div class="card-body" style="color: #ecf2f8">
                 <h5 class="card-title" id="pollTitle">Poll Title</h5>
                 <p id="pollDetails"></p>
                 <form id="voteForm">
                     <div id="candidatesContainer" class="mb-3">
                         <label class="form-label">Select option to vote on:</label>
-                        <div id="candidates">
+                        <div id="candidates" style="color: #89929b;">
                             <!-- Candidates will show up here -->
                         </div>
                     </div>
