--- a/public/login.html
+++ b/public/login.html
@@ -10,8 +10,23 @@ PSU ID: mar6897
     <title>Home page</title>
     <script src="https://kit.fontawesome.com/1357e6d178.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/login_styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        .card {
+            margin: auto;
+            width: 100%;
+            background-color: #21262d;
+        }
+
+        @media (min-width: 1080px) {
+            .card {
+                width: 50%;
+            }
+        }
+    </style>
 </head>
 
 
@@ -19,7 +34,7 @@ PSU ID: mar6897
 <body style="background-color:#161b22;">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Democratic-Decisions</a>
+            <a class="navbar-brand" href="/">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +55,7 @@ PSU ID: mar6897
     </nav>
 
     <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
-        <div class="card" style="width: 100%; background-color: #21262d">
+        <div class="card">
             <div class="card-body" style="color: #ecf2f8">
                 <h5 class="card-title">Login form</h5>
                 <form onsubmit="return false;" id="form">
