--- a/public/poll.html
+++ b/public/poll.html
@@ -4,14 +4,29 @@
     <meta charset="utf-8">
     <title>Create poll</title>
     <link rel="stylesheet" href="/css/poll_styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        .card {
+            margin: auto;
+            width: 100%;
+            background-color: #21262d;
+        }
+
+        @media (min-width: 1080px) {
+            .card {
+                width: 50%;
+            }
+        }
+    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="background-color:#161b22;">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Democratic-Decisions</a>
+            <a class="navbar-brand" href="/">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,9 +39,9 @@
             </div>
         </div>
     </nav>
-    <div class="container my-5">
-        <div class="card" id="main" style="width: 100%;">
-            <div class="card-body">
+    <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
+        <div class="card" id="main">
+            <div class="card-body" style="color: #ecf2f8">
                 <h5 class="card-title">Poll creation form</h5>
 
                 <a onclick="toggle_visibility('info');" style="cursor: pointer; color: dodgerblue; font-weight: 500;">View polls creation tips. <i class="fa fa-info-circle" style="font-size:20px"></i></a> 
@@ -49,8 +64,8 @@
 
                 <form onsubmit="return false;" id="form">
                     <div class="mb-3">
-                        <label for="title" class="form-label" style="font-weight: 500;">Poll Title</label>
-                        <input type="text" class="form-control" id="title" required>
+                        <label for="title" class="form-label" style="font-weight: 500;" >Poll Title</label>
+                        <input type="text" class="form-control" id="title" placeholder="Enter the poll title ..." required>
                     </div>
                     <div class="mb-3">
                         <label for="deadline" class="form-label" style="font-weight: 500;">Deadline</label>
