--- a/public/register.html
+++ b/public/register.html
@@ -5,21 +5,36 @@
     <title>Register page</title>
     <script src="https://kit.fontawesome.com/1357e6d178.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/register_styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        .card {
+            margin: auto;
+            width: 100%;
+            background-color: #21262d;
+        }
+
+        @media (min-width: 1080px) {
+            .card {
+                width: 50%;
+            }
+        }
+    </style>
 </head>
-
-
 
 <body style="background-color:#161b22;">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Democratic-Decisions</a>
+            <a class="navbar-brand" href="/">Democratic-Decisions</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Register</a>
                     </li>
@@ -34,7 +49,7 @@
         </div>
     </nav>
     <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
-        <div class="card" style="margin: auto; width: 60%; background-color: #21262d">
+        <div class="card">
             <div class="card-body" style="color: #ecf2f8">
                 <h5 class="card-title">Register form</h5>
 
@@ -112,10 +127,17 @@
                     <br>
                     <button type="submit" class="btn btn-success">Register &nbsp;<i class="fa fa-user-plus" style="font-size:16px"></i></button>
                 </form>
+
+                <br>
+                <br>
+
+                <div class="already_user" style="font-size: 18px;">
+                    <a>Already a registered user?</a>
+                    <a href="/login" style="color: #faa356">Login</a>
+                </div>
             </div>
         </div>
     </div>
     <script src="js/register.js"></script>
 </body>
-
 </html>
