--- a/public/login.html
+++ b/public/login.html
@@ -88,6 +88,13 @@ PSU ID: mar6897
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="container-footer">
+            <span><i class="fa fa-copyright" style="font-size:16px"></i> Mohd Rokon | <a id="git-link" href="https://github.com/rokon07/SWENG894-Capstone-Project" target="_blank"><i class='fab fa-github' style='font-size:16px'></i> rokon07</a> | 2024</span>
+        </div>
+    </footer>
+
     <script src="js/login.js"></script>
 </body>
 
