--- a/public/poll.html
+++ b/public/poll.html
@@ -5,6 +5,7 @@
     <title>Create poll</title>
     <link rel="stylesheet" href="/css/poll_styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/1357e6d178.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -93,12 +94,12 @@
                     <div class="mb-3">
                         <label for="candidates" class="form-label" style="font-weight: 500;">Enter your candidates/opinions:</label>
                         <div id="candidates"></div>
-                        <button type="button" class="btn btn-primary" id="addCandidate">Add Option</button>
+                        <button type="button" class="btn btn-primary" id="addCandidate">Add Option &nbsp; <i class='fas fa-plus' style='font-size:16px'></i></button>
                     </div>
                     <div class="alert alert-danger" role="alert" id="error" style="display:none;"></div>
                     <div class="alert alert-success" role="alert" id="success" style="display:none;"></div>
                     <br>
-                    <button type="submit" class="btn btn-success">Create Poll</button>
+                    <button type="submit" class="btn btn-success">Create Poll &nbsp; <i class='fas fa-pencil-alt' style='font-size:16px'></i></button>
                 </form>
             </div>
         </div>
