--- a/public/register.html
+++ b/public/register.html
@@ -48,10 +48,10 @@
             </div>
         </div>
     </nav>
-    <div class="container" style="margin-top: 24px; margin-bottom: 24px;">
+    <div class="container" style="margin-top: 24px; margin-bottom: 24px; ">
         <div class="card">
             <div class="card-body" style="color: #ecf2f8">
-                <h5 class="card-title">Register form</h5>
+                <h5 class="card-title">Registration form</h5>
 
                 <a onclick="toggle_visibility('info');" style="cursor: pointer; color: dodgerblue; font-weight: 500;">View registration tips. <i class="fa fa-info-circle" style="font-size:20px"></i></a>
                 <div id="info" style="display: none;">
@@ -74,6 +74,10 @@
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" autocomplete="off" placeholder="Enter your password ..." required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="retype-password" class="form-label">Retype Password to confirm</label>
+                        <input type="password" class="form-control" id="retype-password" autocomplete="off" placeholder="Retype your password ..." required>
                     </div>
                     <div class="mb-3">
                         <label for="fname" class="form-label">First name</label>
@@ -137,7 +141,10 @@
                 </div>
             </div>
         </div>
+
     </div>
+
+
     <script src="js/register.js"></script>
 </body>
 </html>
